--- a/azure-diabetes-predictor.yaml
+++ b/azure-diabetes-predictor.yaml
@@ -4,6 +4,9 @@ metadata:
   name: diabetes-predictor
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: diabetes-predictor
   template:
     metadata:
       labels:
@@ -15,3 +18,14 @@ spec:
           ports:
             - containerPort: 8000
               name: plumber
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: diabetes-predictor
+spec:
+  ports:
+    - port: 8000
+  selector:
+    app: diabetes-predictor
